--- a/dailyui.html
+++ b/dailyui.html
@@ -5,7 +5,7 @@
       <meta name = "viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1.0">
       <meta name="author" content="oscarlund">
 
-      <title>Daily UI - Oscar Lund</title>
+      <title>Design Process - Benify</title>
       <!--Bootstrap-->
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/stylesheet.css" rel="stylesheet">
@@ -28,6 +28,7 @@
       }
 
     </script>
+
     <script>
     $(document).ready(function() {
       $(".scroll").click(function(event){
@@ -52,60 +53,329 @@
     <div class="top-bar2">
       Oscar Lund
     </div>
-   
+
     <a class="scroll-up"><div class="float-bar2">
-        UP<br>
-        <!--i class="fa fa-sort-desc" aria-hidden="true"></i-->
-      </div></a>
+      UP<br>
+      <!--i class="fa fa-sort-desc" aria-hidden="true"></i-->
+    </div></a>
     <a class="scroll"><div class="float-bar">
       DOWN<br>
       <!--i class="fa fa-sort-desc" aria-hidden="true"></i-->
     </div></a>
 
     <div class="container-ui">
-      <h2>Daily UI - 005</h2>
+      <h4 class="modal-title">Daily UI - 005</h4>
       <h3>App Icon</h3>
       <div class="imgs-border">
-        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.png">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_005" data-whatever="@mdo">
+          <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_005.png">
+        </a>
       </div>
       <p id="two" class="date"><br>2017-01-07</p>
     </div>
 
     <div class="container-ui">
-      <h2>Daily UI - 004</h2>
+      <h4 class="modal-title">Daily UI - 004</h4>
       <h3>Calculator</h3>
       <div class="imgs-border">
-        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_004.png">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_004" data-whatever="@mdo">
+        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_004.png">
+        </a>
       </div>
       <p class="date"><br>2017-01-06</p>
     </div>
 
     <div class="container-ui">
-      <h2>Daily UI - 003</h2>
+      <h4 class="modal-title">Daily UI - 003</h4>
       <h3>Landing Page</h3>
       <div class="imgs-border">
-        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.png">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_003" data-whatever="@mdo">
+        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_003.png">
+        </a>
       </div>
       <p class="date"><br>2017-01-05</p>
     </div>
 
     <div class="container-ui">
-      <h2>Daily UI - 002</h2>
+      <h4 class="modal-title">Daily UI - 002</h4>
       <h3>Credit Card Checkout</h3>
       <div class="imgs-border">
-        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_002.png">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_002" data-whatever="@mdo">
+        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_002.png">
+        </a>
       </div>
       <p class="date"><br>2017-01-04</p>
     </div>
 
     <div class="container-ui">
-      <h2>Daily UI - 001</h2>
+      <h4 class="modal-title">Daily UI - 001</h4>
       <h3>Sign Up Form</h3>
       <div class="imgs-border">
-        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_001.png">
+          <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_001" data-whatever="@mdo">
+        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_001.png">
+        </a>
       </div>
       <p class="date"><br>2017-01-03</p>
     </div>
+
+<!--MODALS-->
+<!--MODAL - WF5-->
+<div class="modal" id="daily_005" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal-dialog" role="document">
+  <div class="modal-content" id="hello" >
+    <ul class="shot-nav">
+      <li class="shot-nav-prev" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_004" data-dismiss="modal" data-whatever="@mdo">
+           <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-prev-light-ca583c76838d54eca11832ebbcaba09ba8b2bf347de2335341d244ecb9734593.png" alt="Icon shot prev light">
+        </a>
+      </li>
+      <!--li class="shot-nav-next" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_006" data-dismiss="modal" data-whatever="@mdo">
+          <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
+        </a>
+      </li-->
+    </ul>
+    <div style="text-align:center;"class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <ul class="title col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+          <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+            <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
+          </li>
+          <li class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+            <h4 class="modal-title" id="title5">Daily UI - 005<span><br>Mobile App Icon by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on Jan 7, 2017</span></span>
+            </h4>
+          </li>
+        </ul>
+    </div>
+    <div id="img5" style="text-align:center; " class="modal-body">
+        <div class="container-ui" style="margin-top:-15px;">
+          <div class="imgs-border">
+            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_005.png">
+          </div>
+          <p class="date"><br>2017-01-07</p>
+        </div>
+      <!--TEXT Transaction Emails-->
+      <div id="text5" class="modal-text-container">
+      <p style="font-size:13px;">
+        This logotyp is made to be a mobile app icon for a super fast cloud service, called Rocket Cloud.
+        I wanted it to be playful, yet professional.
+
+      </div>
+      <!--TEXT Transaction Emails END-->
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <!--button type="button" class="btn btn-primary">Send message</button-->
+    </div>
+  </div>
+</div>
+</div>
+<!--MODAL WF5 End-->
+<!--MODAL - WF4-->
+<div class="modal" id="daily_004" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal-dialog" role="document">
+  <div class="modal-content" id="hello" >
+    <ul class="shot-nav">
+      <li class="shot-nav-prev" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_003" data-dismiss="modal" data-whatever="@mdo">
+           <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-prev-light-ca583c76838d54eca11832ebbcaba09ba8b2bf347de2335341d244ecb9734593.png" alt="Icon shot prev light">
+        </a>
+      </li>
+      <li class="shot-nav-next" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_005" data-dismiss="modal" data-whatever="@mdo">
+          <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
+        </a>
+      </li>
+    </ul>
+    <div style="text-align:center;"class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <ul class="title col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+          <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+            <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
+          </li>
+          <li class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+            <h4 class="modal-title" id="title5">Daily UI - 004<span><br>Digital Calculator by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on Jan 6, 2017</span></span>
+            </h4>
+          </li>
+        </ul>
+    </div>
+    <div id="img5" style="text-align:center;" class="modal-body">
+        <div class="container-ui" style="margin-top:-15px;">
+          <div class="imgs-border">
+            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_004.png">
+          </div>
+          <p class="date"><br>2017-01-06</p>
+        </div>
+      <!--TEXT Transaction Emails-->
+      <div id="text5" class="modal-text-container">
+      <p style="font-size:13px;">
+        For this project, my goal was to create an easy to use calculator, with a few modern design elements.
+
+      </div>
+      <!--TEXT Transaction Emails END-->
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <!--button type="button" class="btn btn-primary">Send message</button-->
+    </div>
+  </div>
+</div>
+</div>
+<!--MODAL WF4 End-->
+<!--MODAL - WF3-->
+<div class="modal" id="daily_003" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal-dialog" role="document">
+  <div class="modal-content" id="hello" >
+    <ul class="shot-nav">
+      <li class="shot-nav-prev" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_002" data-dismiss="modal" data-whatever="@mdo">
+           <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-prev-light-ca583c76838d54eca11832ebbcaba09ba8b2bf347de2335341d244ecb9734593.png" alt="Icon shot prev light">
+        </a>
+      </li>
+      <li class="shot-nav-next" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_004" data-dismiss="modal" data-whatever="@mdo">
+          <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
+        </a>
+      </li>
+    </ul>
+    <div style="text-align:center;"class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <ul class="title col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+          <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+            <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
+          </li>
+          <li class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+            <h4 class="modal-title" id="title5">Daily UI - 003<span><br>Landing Page by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on Jan 5, 2017</span></span>
+            </h4>
+          </li>
+        </ul>
+    </div>
+    <div id="img5" style="text-align:center;" class="modal-body">
+        <div class="container-ui" style="margin-top:-15px;">
+          <div class="imgs-border">
+            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_003.png">
+          </div>
+          <p class="date"><br>2017-01-05</p>
+        </div>
+      <!--TEXT Transaction Emails-->
+      <div id="text5" class="modal-text-container">
+      <p style="font-size:13px;">
+        A Landing Page is about to catch the eye of the user and immitiately create interest. I wanted to do this, using contrast colors and a straight forward message.
+
+      </div>
+      <!--TEXT Transaction Emails END-->
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <!--button type="button" class="btn btn-primary">Send message</button-->
+    </div>
+  </div>
+</div>
+</div>
+<!--MODAL WF3 End-->
+<!--MODAL - WF2-->
+<div class="modal" id="daily_002" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal-dialog" role="document">
+  <div class="modal-content" id="hello" >
+    <ul class="shot-nav">
+      <li class="shot-nav-prev" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_001" data-dismiss="modal" data-whatever="@mdo">
+           <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-prev-light-ca583c76838d54eca11832ebbcaba09ba8b2bf347de2335341d244ecb9734593.png" alt="Icon shot prev light">
+        </a>
+      </li>
+      <li class="shot-nav-next" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_003" data-dismiss="modal" data-whatever="@mdo">
+          <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
+        </a>
+      </li>
+    </ul>
+    <div style="text-align:center;"class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <ul class="title col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+          <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+            <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
+          </li>
+          <li class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+            <h4 class="modal-title" id="title5">Daily UI - 002<span><br>Credit Card Checkout by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on Jan 4, 2017</span></span>
+            </h4>
+          </li>
+        </ul>
+    </div>
+    <div id="img5" style="text-align:center;" class="modal-body">
+        <div class="container-ui" style="margin-top:-15px;">
+          <div class="imgs-border">
+            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_002.png">
+          </div>
+          <p class="date"><br>2017-01-04</p>
+        </div>
+      <!--TEXT Transaction Emails-->
+      <div id="text5" class="modal-text-container">
+      <p style="font-size:13px;">
+        For this project, I didn't want to design the standard checkout screen, but instead focus on the product to make the user have a less distressed process.
+
+      </div>
+      <!--TEXT Transaction Emails END-->
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <!--button type="button" class="btn btn-primary">Send message</button-->
+    </div>
+  </div>
+</div>
+</div>
+<!--MODAL WF2 End-->
+<!--MODAL - WF1-->
+<div class="modal" id="daily_001" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+<div class="modal-dialog" role="document">
+  <div class="modal-content" id="hello" >
+    <ul class="shot-nav">
+
+      <li class="shot-nav-next" style="display:list-item">
+        <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_002" data-dismiss="modal" data-whatever="@mdo">
+          <img src="https://d13yacurqjgara.cloudfront.net/assets/icon-shot-next-light-871a18220c4c5a0325d1353f8e4cc204c3b49beacc63500644556faf25ded617.png" alt="Icon shot next light">
+        </a>
+      </li>
+    </ul>
+    <div style="text-align:center;"class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <ul class="title col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+          <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+            <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
+          </li>
+          <li class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+            <h4 class="modal-title" id="title5">Daily UI - 001<span><br>Sign Up Form by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on Jan 3, 2017</span></span>
+            </h4>
+          </li>
+        </ul>
+    </div>
+    <div id="img5" style="text-align:center;" class="modal-body">
+        <div class="container-ui" style="margin-top:-15px;">
+          <div class="imgs-border">
+            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_001.png">
+          </div>
+          <p class="date"><br>2017-01-03</p>
+        </div>
+      <!--TEXT Transaction Emails-->
+      <div id="text5" class="modal-text-container">
+      <p style="font-size:13px;">
+        My first project for the DailyUI Challenge. I focused on creating a easy to follow sign up process, without too many distractions. 
+
+      </div>
+      <!--TEXT Transaction Emails END-->
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <!--button type="button" class="btn btn-primary">Send message</button-->
+    </div>
+  </div>
+</div>
+</div>
+<!--MODAL WF1 End-->
 
 
   </body>
