--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <div>
           <a target="_blank" rel="noreferrer" href="http://oscarlund.com/dailyui">
             <div style="text-align:center; margin-top:50px;">
-            <button class="button_black" style="font-size:12px; font-weight:400; opacity:1;">This is Why You Need a Designer.<img class="bounce-hover" src="imgs/arrow-right-eee.svg"></button></p>
+            <button class="button_black" style="font-size:12px; font-weight:400; opacity:1;">My DailyUI Challenge.<img class="bounce-hover" src="imgs/arrow-right-eee.svg"></button></p>
             </div>
           </a>
         </div>
