--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
       <meta name = "viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1.0">
       <meta name="author" content="oscarlund">
 
-      <title>olund.co</title>
+      <title>Oscar Lund - Designer</title>
       <!--Bootstrap-->
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/stylesheet.css" rel="stylesheet">
       <link href="css/layout.css" rel="stylesheet">
       <link href="css/animate.css" rel="stylesheet">
-      <link rel="icon" type="image/png" href="/imgs/fav1.png" />
+      <link rel="icon" type="image/png" href="/imgs/fav2.png" />
       <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900" rel="stylesheet">
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -503,7 +503,7 @@
           </div>
           <div class="modal-body">
             <form action="mailto:olund90@gmail.com" method="post" enctype="text/plain">
-              <img style="border-radius:5px; width:100%; max-width:400px;" src="imgs/portfolio-modal-gifs/transaction_emails_ace-up.gif" alt="" />
+              <img style="border-radius:5px; width:100%; max-width:400px;" src="imgs/portfolio-modal-gifs/Transaction_emails_ace-up.gif" alt="" />
 
 
               <!--div class="form-group">
