--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name = "viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1.0">
       <meta name="author" content="oscarlund">
 
-      <title>Oscar Lund - Designer</title>
+      <title>Designer - Oscar Lund</title>
       <!--Bootstrap-->
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/stylesheet.css" rel="stylesheet">
@@ -251,7 +251,7 @@
         <div>
           <a target="_blank" rel="noreferrer" href="benify2.html">
             <div style="text-align:center; margin-top:50px;">
-            <button class="button_black" style="font-size:12px; font-weight:400; opacity:1;">This is Why You Need a Designer.<img class="bounce-hover" src="imgs/arrow-right-eee.svg"></button></p>
+            <button class="button_black" style="font-size:12px; font-weight:400; opacity:1;">My DailyUI Challenge<img class="bounce-hover" src="imgs/arrow-right-eee.svg"></button></p>
             </div>
           </a>
         </div>
