--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           <h2 class"text-in-1" style="">Oscar Lund. Freelance Designer.</h2>
           <p class="h3top" >Sharp, value adding design for web & print.</p>
         <div>
-          <a target="_blank" rel="noreferrer" href="benify2.html">
+          <a target="_blank" rel="noreferrer" href="http://oscarlund.com/dailyui">
             <div style="text-align:center; margin-top:50px;">
             <button class="button_black" style="font-size:12px; font-weight:400; opacity:1;">My DailyUI Challenge<img class="bounce-hover" src="imgs/arrow-right-eee.svg"></button></p>
             </div>
