--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
         <div class="write-on write-on-text" style="position:relative; color:#eee; font-family:'open sans', sans-serif;">
           <span style="font-weight:400; color:#eee;" class="typeeffect"></span>
-          <span style="font-weight:700; color:#ede896;" class="typeeffect2"></span>
+          <span style="font-weight:700; color:#3d8dff;" class="typeeffect2"></span>
         </div>
 
 
