--- a/dailyui.html
+++ b/dailyui.html
@@ -68,7 +68,7 @@
       <h3>App Icon</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_005" data-whatever="@mdo">
-          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.png">
+          <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_005.png">
         </a>
       </div>
       <p id="two" class="date"><br>2017-01-07</p>
@@ -79,7 +79,7 @@
       <h3>Calculator</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_004" data-whatever="@mdo">
-        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_004.png">
+        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_004.png">
         </a>
       </div>
       <p class="date"><br>2017-01-06</p>
@@ -90,7 +90,7 @@
       <h3>Landing Page</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_003" data-whatever="@mdo">
-        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.png">
+        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_003.png">
         </a>
       </div>
       <p class="date"><br>2017-01-05</p>
@@ -101,7 +101,7 @@
       <h3>Credit Card Checkout</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_002" data-whatever="@mdo">
-        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_002.png">
+        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_002.png">
         </a>
       </div>
       <p class="date"><br>2017-01-04</p>
@@ -112,7 +112,7 @@
       <h3>Sign Up Form</h3>
       <div class="imgs-border">
           <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_001" data-whatever="@mdo">
-        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_001.png">
+        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_001.png">
         </a>
       </div>
       <p class="date"><br>2017-01-03</p>
@@ -141,7 +141,7 @@
           <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
             <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
           </li>
-          <li class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+          <li class="col-xs-10 col-sm-8 col-md-8 col-lg-8">
             <h4 class="modal-title" id="title5">Daily UI - 005<span><br>Mobile App Icon by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on Jan 7, 2017</span></span>
             </h4>
           </li>
@@ -150,7 +150,7 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.png">
+            <a href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.png" target="_blank" rel="noreferrer"><img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_005.png"></a>
           </div>
           <p class="date"><br>2017-01-07</p>
         </div>
@@ -194,7 +194,7 @@
           <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
             <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
           </li>
-          <li class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+          <li class="col-xs-10 col-sm-8 col-md-8 col-lg-8">
             <h4 class="modal-title" id="title5">Daily UI - 004<span><br>Digital Calculator by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on Jan 6, 2017</span></span>
             </h4>
           </li>
@@ -203,7 +203,7 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_004.png">
+            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_004.png">
           </div>
           <p class="date"><br>2017-01-06</p>
         </div>
@@ -246,7 +246,7 @@
           <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
             <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
           </li>
-          <li class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+          <li class="col-xs-10 col-sm-8 col-md-8 col-lg-8">
             <h4 class="modal-title" id="title5">Daily UI - 003<span><br>Landing Page by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on Jan 5, 2017</span></span>
             </h4>
           </li>
@@ -255,7 +255,7 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.png">
+            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_003.png">
           </div>
           <p class="date"><br>2017-01-05</p>
         </div>
@@ -298,7 +298,7 @@
           <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
             <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
           </li>
-          <li class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+          <li class="col-xs-10 col-sm-8 col-md-8 col-lg-8">
             <h4 class="modal-title" id="title5">Daily UI - 002<span><br>Credit Card Checkout by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on Jan 4, 2017</span></span>
             </h4>
           </li>
@@ -307,7 +307,7 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_002.png">
+            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_002.png">
           </div>
           <p class="date"><br>2017-01-04</p>
         </div>
@@ -346,7 +346,7 @@
           <li class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
             <img src="https://dl.dropboxusercontent.com/s/ndsf9pd1r6v98tf/oscarlinkedin4.jpg?dl=0">
           </li>
-          <li class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+          <li class="col-xs-10 col-sm-8 col-md-8 col-lg-8">
             <h4 class="modal-title" id="title5">Daily UI - 001<span><br>Sign Up Form by <a href="https://dribbble.com/oscarlund" target="_blank" rel="noreferrer">Oscar Lund</a><span class="date2"> on Jan 3, 2017</span></span>
             </h4>
           </li>
@@ -355,14 +355,14 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_001.png">
+            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_001.png">
           </div>
           <p class="date"><br>2017-01-03</p>
         </div>
       <!--TEXT Transaction Emails-->
       <div id="text5" class="modal-text-container">
       <p style="font-size:13px;">
-        My first project for the DailyUI Challenge. I focused on creating a easy to follow sign up process, without too many distractions. 
+        My first project for the DailyUI Challenge. I focused on creating a easy to follow sign up process, without too many distractions.
 
       </div>
       <!--TEXT Transaction Emails END-->
