--- a/dailyui.html
+++ b/dailyui.html
@@ -68,7 +68,7 @@
       <h3>App Icon</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_005" data-whatever="@mdo">
-          <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_005.png">
+          <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.png">
         </a>
       </div>
       <p id="two" class="date"><br>2017-01-07</p>
@@ -79,7 +79,7 @@
       <h3>Calculator</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_004" data-whatever="@mdo">
-        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_004.png">
+        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_004.png">
         </a>
       </div>
       <p class="date"><br>2017-01-06</p>
@@ -90,7 +90,7 @@
       <h3>Landing Page</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_003" data-whatever="@mdo">
-        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_003.png">
+        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.png">
         </a>
       </div>
       <p class="date"><br>2017-01-05</p>
@@ -101,7 +101,7 @@
       <h3>Credit Card Checkout</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_002" data-whatever="@mdo">
-        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_002.png">
+        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_002.png">
         </a>
       </div>
       <p class="date"><br>2017-01-04</p>
@@ -112,7 +112,7 @@
       <h3>Sign Up Form</h3>
       <div class="imgs-border">
           <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_001" data-whatever="@mdo">
-        <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_001.png">
+        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_001.png">
         </a>
       </div>
       <p class="date"><br>2017-01-03</p>
@@ -150,7 +150,7 @@
     <div id="img5" style="text-align:center; " class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <a href="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.png" target="_blank" rel="noreferrer"><img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_005.png"></a>
+            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.png">
           </div>
           <p class="date"><br>2017-01-07</p>
         </div>
@@ -203,7 +203,7 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_004.png">
+            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_004.png">
           </div>
           <p class="date"><br>2017-01-06</p>
         </div>
@@ -255,7 +255,7 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_003.png">
+            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.png">
           </div>
           <p class="date"><br>2017-01-05</p>
         </div>
@@ -307,7 +307,7 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_002.png">
+            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_002.png">
           </div>
           <p class="date"><br>2017-01-04</p>
         </div>
@@ -355,7 +355,7 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="imgs/dailyui-imgs/dailyui_001.png">
+            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_001.png">
           </div>
           <p class="date"><br>2017-01-03</p>
         </div>
