--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
           </div>
           <div class="modal-body">
             <form action="mailto:olund90@gmail.com" method="post" enctype="text/plain">
-              <iframe width="97%" height="320" src="https://www.youtube.com/embed/UReieqpY1x0?autoplay=1" frameborder="0" allowfullscreen></iframe>
+              <iframe width="97%" height="320" src="https://www.youtube.com/embed/UReieqpY1x0?" frameborder="0" allowfullscreen></iframe>
 
 
               <!--div class="form-group">
