--- a/dailyui.html
+++ b/dailyui.html
@@ -152,7 +152,7 @@
           <div class="imgs-border">
             <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_005.png">
           </div>
-          <p class="date"><br>2017-01-07</p>
+          <!--p class="date"><br>2017-01-03</p-->
         </div>
       <!--TEXT Transaction Emails-->
       <div id="text5" class="modal-text-container">
@@ -205,7 +205,7 @@
           <div class="imgs-border">
             <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_004.png">
           </div>
-          <p class="date"><br>2017-01-06</p>
+          <!--p class="date"><br>2017-01-03</p-->
         </div>
       <!--TEXT Transaction Emails-->
       <div id="text5" class="modal-text-container">
@@ -257,7 +257,7 @@
           <div class="imgs-border">
             <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.png">
           </div>
-          <p class="date"><br>2017-01-05</p>
+          <!--p class="date"><br>2017-01-03</p-->
         </div>
       <!--TEXT Transaction Emails-->
       <div id="text5" class="modal-text-container">
@@ -309,7 +309,7 @@
           <div class="imgs-border">
             <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_002.png">
           </div>
-          <p class="date"><br>2017-01-04</p>
+          <!--p class="date"><br>2017-01-03</p-->
         </div>
       <!--TEXT Transaction Emails-->
       <div id="text5" class="modal-text-container">
@@ -357,7 +357,7 @@
           <div class="imgs-border">
             <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_001.png">
           </div>
-          <p class="date"><br>2017-01-03</p>
+          <!--p class="date"><br>2017-01-03</p-->
         </div>
       <!--TEXT Transaction Emails-->
       <div id="text5" class="modal-text-container">
