--- a/dailyui.html
+++ b/dailyui.html
@@ -90,7 +90,7 @@
       <h3>Landing Page</h3>
       <div class="imgs-border">
         <a id="openBtn" style="cursor:pointer;" data-toggle="modal" data-target="#daily_003" data-whatever="@mdo">
-        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.png">
+        <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.jpg">
         </a>
       </div>
       <p class="date"><br>2017-01-05</p>
@@ -255,7 +255,7 @@
     <div id="img5" style="text-align:center;" class="modal-body">
         <div class="container-ui" style="margin-top:-15px;">
           <div class="imgs-border">
-            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.png">
+            <img class="imgs-ui" src="https://raw.githubusercontent.com/oscarlund/portfolio2/gh-pages/imgs/dailyui_imgs/DailyUI_003.jpg">
           </div>
           <!--p class="date"><br>2017-01-03</p-->
         </div>
